# purrfect-spots

./: .env.example  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  .trivyignore  AGENTS.md  AWS_IAM_FIX.md  AWS_S3_SETUP.md  BUILD_GUIDE.md  CODING_STANDARDS.md  DEPLOYMENT.md  ENVIRONMENT_VARIABLES_GUIDE.md  ERROR_HANDLERS_README.md  Google_FedCM_Fix.md  LICENSE  Loading_Components_Guide.md  Makefile  Modern_OAuth_Implementation.md  OAUTH_SETUP_GUIDE.md  OAuth_Setup_Guide.md  PRODUCTION_GUIDE.md  README.md  SKILL_AGENT.md  UPLOAD_SYSTEM_UPDATE.md  VERCEL_DEPLOYMENT.md  build-backend.bat  build-backend.sh  build-config.json  build-frontend.bat  build-frontend.sh  build.bat  build.sh  deploy-vercel.bat  deploy-vercel.sh  docker-compose.prod.yml  docker-compose.yml  env_setup_instructions.md  frontend_lint_full.json  jobs.json  openapi-baseline.json  (+13 more)
.github/: CODEOWNERS  (+2 more)
backend/: .coverage  .dockerignore  .env.example  .gitignore  .snyk  AUTHENTICATION_INTEGRATION.md  Dockerfile  ME_ENDPOINT_DOCUMENTATION.md  README.md  README_API.md  ROUTES_STRUCTURE.md  SUPABASE_AUTH_PATTERN.md  api_handlers.py  app.py  aws_config.py  backend_errors.txt  config.py  database.py  dependencies.py  docker-compose.yml  example_me_endpoint.py  exceptions.py  fastapi_app.py  index.py  install_dependencies.bat  install_dependencies.ps1  limiter.py  locustfile.py  logger.py  main.py  migration_admin_role.sql  models.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  requirements_utf8.txt  routes.py  ruff.toml  ruff_errors.txt  (+15 more)
backend/api/: index.py
backend/auth/: routes.py
backend/constants/: __init__.py  admin_permissions.py
backend/docs/: openapi-baseline.json
backend/middleware/: auth_middleware.py  csrf_middleware.py  etag_middleware.py  geo_blocking_middleware.py  idempotency_middleware.py  request_id_middleware.py  security_middleware.py
backend/migrations/: 001_add_tags_column.sql  001_create_users_table.sql  002_add_password_auth.sql  002_add_search_indexes.sql  002_admin_dashboard_tables.sql  003_add_bio_column.sql  003_enable_postgis.sql  004_add_performance_indexes.sql  004_create_password_resets.sql  005_add_performance_indexes.sql  006_create_token_blacklist.sql  006_sync_auth_users.sql  007_add_subscription_and_treats.sql  007_enforce_verification.sql  008_improve_treats_system.sql  008_secure_cat_photos.sql  009_atomic_purchase_treats.sql  009_optimize_gallery.sql  010_add_cancel_at_period_end.sql  010_fix_security_issues.sql  011_optimize_rls_and_security.sql  011_optimize_treat_functions.sql  012_fix_postgis_security.sql  012_get_photos_with_likes.sql  013_leaderboard_function.sql  014_toggle_likes.sql  015_fix_duplicate_triggers.sql  016_enable_realtime_notifications.sql  016_notification_trigger.sql  018_create_reports_table.sql  018_insert_report_permissions.sql  020_feature_improvements.sql  020_fix_deletion_filtering.sql  021_enable_universal_rls.sql  022_enable_universal_rls.sql  023_account_deletion.sql  024_users_fts.sql  025_admin_dashboard_rpc.sql  026_treat_admin_improvements.sql  027_performance_indexes.sql  (+10 more)
backend/routes/: __init__.py  admin.py  api_v1.py  auth.py  auth_google.py  auth_manual.py  breach_notification.py  cat_detection.py  consent.py  feature_flags.py  gallery.py  gallery.txt  geo.py  health.py  notifications.py  profile.py  reports.py  seo.py  social.py  subscription.py  treats.py  upload.py
backend/routes/admin/: __init__.py  audit.py  comments.py  content.py  maintenance.py  reports.py  roles.py  security.py  settings.py  stats.py  treats.py  users.py
backend/schemas/: admin_schemas.py  auth.py  breach.py  cat_detection.py  common.py  consent.py  gallery.py  location.py  notification.py  profile.py  report.py  settings_schemas.py  social.py  subscription.py  treats.py  user.py
backend/scripts/: check_api_breaking_changes.py  check_email_config.py  check_migration_capability.py  cleanup_roles.py  export_openapi.py  fix_user_roles.py  promote_super_admin.py  run_migration_draft.py  seed_admin_data.py  seed_data.py  test_db_conn.py
backend/services/: __init__.py  auth_service.py  cat_detection.py  cat_detection_service.py  email_service.py  encryption_service.py  feature_flags.py  gallery_service.py  google_auth_service.py  google_vision.py  image_service.py  line_service.py  notification_service.py  oauth_service.py  otp_service.py  password_service.py  quota_service.py  redis_service.py  report_service.py  search_service.py  seo_service.py  social_service.py  storage_service.py  subscription_service.py  token_service.py  treats_service.py  user_service.py
backend/tasks/: cleanup_tasks.py
backend/tests/: conftest.py  test_admin_routes.py  test_admin_routes_extended.py  test_api_contract.py  test_async_client.py  test_auth_google_route.py  test_auth_manual_route.py  test_auth_middleware.py  test_auth_permissions.py  test_auth_service.py  test_auth_service_auto.py  test_auth_service_extended.py  test_cache.py  test_cat_detection.py  test_cat_detection_route_extended.py  test_cat_detection_service_extended.py  test_cleanup_tasks.py  test_datetime_utils.py  test_db_security_extended.py  test_env.py  test_exceptions.py  test_feature_flags.py  test_file_processing.py  test_gallery.py  test_gallery_service.py  test_gallery_service_auto.py  test_gallery_service_extended.py  test_gallery_service_security.py  test_google_vision_extended.py  test_health.py  test_limiter.py  test_notification_service.py  test_otp_service.py  test_password_service.py  test_profile_route.py  test_quota_route.py  test_quota_service.py  test_rate_limiter_local.py  test_report_service.py  test_routes.py  (+11 more)
backend/user_models/: user.py
backend/utils/: action_throttle.py  async_client.py  audit_logger.py  auth_response_utils.py  auth_utils.py  cache.py  datetime_utils.py  db_security.py  env.py  exception_handlers.py  export_utils.py  file_processing.py  file_utils.py  http_client.py  image_utils.py  location_utils.py  rate_limit.py  rate_limiter.py  security.py  security_alerts.py  session_concurrency.py  supabase_client.py  telemetry.py
(+442 files in other folders)
