[project]
name = "purrfect-spots-backend"
version = "3.0.0"
description = "Purrfect Spots API - Cat location sharing platform"
requires-python = ">=3.12"

[tool.mypy]
python_version = "3.12"
warn_return_any = false  # Too many false positives with Supabase client
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false  # Gradually enable
strict_optional = true
no_implicit_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = false
explicit_package_bases = true
exclude = [
    "^tests/",
    "^scripts/",
    "^\\.venv/",
    "^__pycache__/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["utils.*", "services.*", "routes.*", "middleware.*"]
warn_return_any = false
check_untyped_defs = false
disable_error_code = ["import-untyped", "union-attr", "assignment", "arg-type", "return-value"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "__pycache__"]
skips = ["B101", "B104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "__pycache__/*",
    "scripts/*",
]
branch = true

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

