[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "purrfect-spots-backend"
version = "0.1.0"
description = "Backend for Purrfect Spots"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn>=0.24.0,<0.33.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "boto3>=1.34.0,<2.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "supabase>=2.0.0,<3.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "google-auth>=2.23.4,<3.0.0",
    "google-auth-oauthlib>=1.0.0,<2.0.0",
    "google-auth-httplib2>=0.1.1,<1.0.0",
    "google-generativeai>=0.3.2,<1.0.0",
    "google-cloud-vision>=3.4.0,<4.0.0",
    "google-cloud-storage>=2.10.0,<3.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "Pillow>=10.1.0,<12.0.0",
    "httpx>=0.25.2,<1.0.0",
    "bcrypt>=4.1.2,<5.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "cryptography>=41.0.7,<47.0.0",
    "requests>=2.31.0,<3.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "sentry-sdk[fastapi]>=1.39.0,<3.0.0",
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "redis>=5.0.0,<6.0.0",
    "python-magic-bin>=0.4.14,<1.0.0 ; sys_platform == 'win32'",
    "python-magic>=0.4.14,<1.0.0 ; sys_platform != 'win32'",
    "bleach>=6.0.0,<7.0.0",
    "orjson>=3.9.10",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.40b0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "types-requests>=2.31.0",
    "types-redis>=4.6.0",
    "types-Pillow>=10.0.0",
    "types-bleach>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.12"
warn_return_any = false  # Too many false positives with Supabase client
warn_unused_configs = true
ignore_missing_imports = false  # Now we have type stubs installed
disallow_untyped_defs = false
check_untyped_defs = true  # Enable with type stubs
strict_optional = true
no_implicit_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = false
explicit_package_bases = true
exclude = [
    "^tests/",
    "^scripts/",
    "^\\.venv/",
    "^__pycache__/",
]

# Third-party library overrides (still missing stubs)
[[tool.mypy.overrides]]
module = [
    "supabase.*",
    "google.*",
    "google_auth_oauthlib.*",
    "opentelemetry.*",
    "slowapi.*",
    "sentry_sdk.*",
    "magic",
    "passlib.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["utils.*", "services.*", "routes.*", "middleware.*"]
warn_return_any = false
check_untyped_defs = false
disable_error_code = ["import-untyped", "union-attr", "assignment", "arg-type", "return-value"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "__pycache__"]
skips = ["B101", "B104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "__pycache__/*",
    "scripts/*",
]
branch = true

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
