[project]
name = "purrfect-spots"
version = "3.1.0"
description = "PurrFect Spots API - Helping you share and discover cat locations"
authors = [
    { name = "Purrfect Spots Team", email = "support@purrfectspots.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.5.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "sentry-sdk[fastapi]>=2.0.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "google-cloud-vision>=3.7.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "structlog==25.5.0",
    "python-json-logger>=3.0.0,<5.0.0",
    "sqlalchemy==2.0.41",
    "asyncpg==0.30.0",
    "email-validator>=2.1.0",
    "bleach>=6.1.0",
    "filetype>=1.2.0",
    "Pillow>=10.0.0",
    "stripe>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "anyio>=4.3.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "black>=24.3.0",
    "isort>=5.13.0",
    "Faker>=24.0.0",
    "pyfakefs>=5.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = ["B008", "PLR0913", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["config", "database", "dependencies", "logger", "limiter", "routes", "schemas", "services", "utils"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "sentry_sdk.*",
    "slowapi.*",
    "supabase.*",
    "gotrue.*",
    "storage3.*",
    "google.cloud.*",
    "redis.*",
    "pythonjsonlogger.*",
    "jose.*",
    "passlib.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--color=yes",
    "--strict-markers",
    "--strict-config",
    "-ra",
]
filterwarnings = [
    # Ignore deprecation warnings from external libraries
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning",
    "ignore:.*asyncio.get_event_loop_policy.*:DeprecationWarning",
    "ignore:.*asyncio.set_event_loop_policy.*:DeprecationWarning",
    "ignore:.*Image.Image.getdata.*:DeprecationWarning",
    "ignore:.*datetime.datetime.utcnow.*:DeprecationWarning",
    "ignore::DeprecationWarning:starlette.*",
    "ignore::DeprecationWarning:fastapi.*",
    "ignore::DeprecationWarning:supabase.*",
    "ignore::DeprecationWarning:gotrue.*",
    "ignore::DeprecationWarning:storage3.*",
    "ignore:.*The `gotrue` package is deprecated.*:DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
    "ignore:.*ORJSONResponse is deprecated.*",
    # Pydantic deprecated Extra (V2 migration) - ignore in dependencies
    "ignore:.*pydantic.config.Extra is deprecated.*:DeprecationWarning",
    "ignore:.*pydantic.config.Extra is deprecated.*:pydantic.PydanticDeprecatedSince20",
    # Pytest-asyncio loop scope warnings
    "ignore:.*asyncio_default_fixture_loop_scope.*:DeprecationWarning",
]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*", ".venv/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise importError",
]
